--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,14 @@
-.App {
-  text-align: center;
+.header {
+  overflow: hidden;
+  background-color: #17a2b8;
+  padding: 20px 10px;
+  box-shadow: 0px 3px 6px #cac7c7;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-desc {
+  color: #fff;
+  text-align: left;
+  text-decoration: none;
+  font-size: 25px;
+  border-radius: 4px;
 }
