--- a/src/components/infoBox/InfoBox.css
+++ b/src/components/infoBox/InfoBox.css
@@ -14,7 +14,7 @@
   border-top-right-radius: 5px;
   display: flex;
   text-align: center;
-  background-color: #26ac81;
+  background-color: #48c79f;
   color: #ffffff;
   position: relative;
   width: 100%;
@@ -28,6 +28,7 @@
   position: relative;
   text-align: left;
   display: flex;
+  flex-direction: column;
   width: 100%;
 }
 
